# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
gendiff/: gendiff.py  generate_diff.py  make_ast.py  parsers.py
gendiff/formatters/: get_formatter.py  json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: json.txt  output.txt
